# FlowMind

./: .gitignore  CLAUDE.md  render.yaml
Backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
Backend/alembic/: env.py
Backend/app/: __init__.py  main.py
Backend/app/analytics/: __init__.py  calculators.py
Backend/app/api/v1/: router.py
Backend/app/auth/: dependencies.py  service.py
Backend/app/core/: cache.py  celery_app.py  config.py  logging.py  rate_limit.py  security.py
Backend/app/database/: base.py  init_db.py  session.py
Backend/app/insights/: __init__.py  engine.py  summary.py
Backend/app/ml/: __init__.py
Backend/app/ml/features/: __init__.py  engineering.py
Backend/app/ml/inference/: __init__.py  engine.py  registry.py
Backend/app/ml/models/: __init__.py  anomaly_detector.py  (+4 more)
Backend/app/models/: __init__.py  achievement.py  category.py  enums.py  expense.py  financial_score.py  insight.py  prediction.py  spending_trend.py  user.py  weekly_summary.py
Backend/app/schemas/: analytics.py  auth.py  common.py  expense.py  health.py  insight.py  prediction.py  user.py
Backend/app/services/: analytics_service.py  expense_service.py  health_service.py  insight_service.py  prediction_service.py
Backend/app/tasks/: __init__.py  analytics_tasks.py  base.py  insight_tasks.py  ml_tasks.py
Backend/app/utils/: datetime.py  pagination.py
Backend/scripts/: seed_demo.py
Backend/tests/: conftest.py  test_analytics.py  test_auth.py  test_expenses.py  test_ml.py
(+74 files in other folders)
